# yolox-pedestrian-detection-all-weather-aug

./: .gitignore  README.md  app.py  coco_classes.py  demo.py  eval.py  export_onnx.py  inference_requirements.txt  requirements.txt  sort.py  yolox_onnx.py  yolox_tracker.py  yolox_trt.py
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  yolox-onnx.cpp  yolox_onnx  yolox_onnx.cpp
exps/example/custom/: nano.py  yolox_s.py
models/: pedestrian-detection-best55.onnx  pedestrian-detection-best95.onnx  yolox_nano_pretrained.onnx
tools/: trt.py  yolo2json.py
yolox/core/: trainer.py
yolox/data/datasets/: coco.py  mosaicdetection.py
yolox/exp/: base_exp.py  yolox_base.py
yolox/models/: build.py
